Record scenario package compilation report